fix: layout issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -19,7 +19,6 @@ body {
   display: flex;
   font-size: var(--font-size-0);
   overflow-x: hidden;
-  transition: 0.4s ease-in-out;
 
   &::after{
     content: '';
