--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -51,10 +51,6 @@
   grid-area: editor;
   align-self: flex-end;
   backdrop-filter: blur(5px);
-
-  &:hover, &:focus{
-    background: var(--surface-2);
-  }
 }
 
 .add-note-btn{
