--- a/styles/reset.css
+++ b/styles/reset.css
@@ -27,7 +27,7 @@ ol[role='list'] {
 
 /* Set core body defaults */
 body {
-  min-height: 100svh;
+  height: 100svh;
   line-height: 1.5;
 }
 
