--- a/styles/sidenav.css
+++ b/styles/sidenav.css
@@ -1,5 +1,5 @@
 .sidenav {
-  --width: min(65vw, 320px);
+  --width: min(60vw, 320px);
   top: 0;
   container-name: sidebar;
   container-type: inline-size;
@@ -13,6 +13,7 @@
   position: relative;
   grid-gap: var(--space-fluid-1);
   transition: 0.4s ease-in-out;
+  transition-property: transform;
   transform: translateX(-50px);
 
   .sidenav-header{
